--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <li><a href="https://your-other-website.com">My Other Website</a></li>
     </ul>
      <p>Note To IT:</p>
-    <p>I Will Not Stop Unless You Unblock Spotify</p></p>
+    <p>I Will Not Stop Unless You Unblock Spotify (:</p></p>
 </body>
 </html>
