--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h2>Check out my links:</h2>
     <ul>
         <li><a href="https://loadbit6.github.io/HeilHater/">Ice Dodo</a></li>
-        <li><a href="https://twitter.com/your-twitter">My Twitter</a></li>
-        <li><a href="https://your-other-website.com">My Other Website</a></li>
+        <li><a href="https://loadbit6.github.io/The-Final-Earth-2/">The Final Earth 2</a></li>
+        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">dont click</a></li>
     </ul>
      <p>Note To IT:</p>
     <p>I Will Not Stop Unless You Unblock Spotify (:</p></p>
