--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <h2>Check out my links:</h2>
     <ul>
-        <li><a href="https://loadbit6.github.io/icedodo/">Ice Dodo</a></li>
+        <li><a href="https://loadbit6.github.io/Icedodo/">Ice Dodo</a></li>
         <li><a href="https://loadbit6.github.io/The-Final-Earth-2/">The Final Earth 2</a></li>
         <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">dont click</a></li>
     </ul>
