--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <h2>Check out my links:</h2>
     <ul>
         <li><a href="https://loadbit6.github.io/Icedodo/">Ice Dodo</a></li>
-        <li><b href="https://loadbit6.github.io/The-Final-Earth-2/">The Final Earth 2</b></li>
+        <li><b href="idk.com">space</b><li>
+        <li><a href="https://loadbit6.github.io/The-Final-Earth-2/">The Final Earth 2</a></li>
+        <li><b href="idk.com">space</b><li>
         <li><a href="https://loadbit6.github.io/offline-paradise">offline Paradise</a></li>
-        <li><b href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">dont click</b></li>
+        <li><b href="idk.com">space</b><li>
+        <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">dont click</a></li>
     </ul>
      <p>Note To IT:</p>
     <p>I Will Not Stop Unless You Unblock Spotify (:</p></p>
