--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
         <li><a href="https://loadbit6.github.io/The-Final-Earth-2/">The Final Earth 2</a></li>
         <li><b href="idk.com"> </b><li>
         <li><a href="https://loadbit6.github.io/offline-paradise">offline Paradise</a></li>
+         <li><b href="idk.com"> </b><li>
+        <li><a href="https://loadbit6.github.io/Bitlife">Bitlife</a></li>
         <li><b href="idk.com"> </b><li>
         <li><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">dont click</a></li>
+        
     </ul>
      <p>Note To IT:</p>
     <p>I Will Not Stop Unless You Unblock Spotify (:</p></p>
